--- a/.vim/rc/dein.toml
+++ b/.vim/rc/dein.toml
@@ -5,6 +5,7 @@ repo = 'scrooloose/syntastic'
 repo = 'w0ng/vim-hybrid'
 hook_add = '''
   set background=dark
+  let g:hybrid_use_iTerm_colors = 1
   au MyAutoCmd VimEnter * nested colorscheme hybrid
 '''
 
