--- a/.vim/rc/lazy_plugins.toml
+++ b/.vim/rc/lazy_plugins.toml
@@ -1,1 +1,15 @@
+[[plugins]]
+repo = 'hdima/python-syntax'
+on_ft = 'python'
+hook_add = '''
+  let python_highlight_all = 1
+'''
 
+[[plugins]]
+repo = 'Yggdroot/indentLine'
+on_ft = 'python'
+hook_add = '''
+  let g:indentLine_enabled = 1
+  let g:indentLine_char = '│'
+  let g:indentLine_color_term = 239
+'''
