--- a/.vim/rc/plugins.toml
+++ b/.vim/rc/plugins.toml
@@ -1,5 +1,8 @@
 [[plugins]]
 repo = 'scrooloose/syntastic'
+hook_add = '''
+  let g:syntastic_python_checkers = ['pyflakes', 'pep8']
+'''
 
 [[plugins]]
 repo = 'w0ng/vim-hybrid'
@@ -9,18 +12,3 @@ hook_add = '''
   au MyAutoCmd VimEnter * nested colorscheme hybrid
 '''
 
-[[plugins]]
-repo = 'hdima/python-syntax'
-on_ft = 'python'
-hook_add = '''
-  let python_highlight_all = 1
-'''
-
-[[plugins]]
-repo = 'Yggdroot/indentLine'
-on_ft = 'python'
-hook_add = '''
-  let g:indentLine_enabled = 1
-  let g:indentLine_char = '│'
-  let g:indentLine_color_term = 239
-'''
