Vimのカーソル位置のコンテキストタイプを自動判別してハイライトを動的変更するようプラグイン追加。

--- a/.vim/rc/plugins.toml
+++ b/.vim/rc/plugins.toml
@@ -12,3 +12,9 @@ hook_add = '''
   au MyAutoCmd VimEnter * nested colorscheme hybrid
 '''
 
+[[plugins]]
+repo = 'Shougo/context_filetype.vim'
+
+[[plugins]]
+repo = 'osyo-manga/vim-precious'
+depends = ['Shougo/context_filetype.vim']
