VimのJavaScript系プラグインのロード指定がミスってたので直しました。

--- a/.vim/rc/lazy_plugins.toml
+++ b/.vim/rc/lazy_plugins.toml
@@ -12,6 +12,8 @@ hook_add = '''
 '''
 
 # JavaScript
+
+[[plugins]]
 repo = 'jason0x43/vim-js-indent'
 on_ft = ['javascript', 'typescript', 'html']
 hook_add = '''
